@@ -4,6 +4,7 @@ examples/flickr_cameras.pl
 lib/Flickr/Photo.pm
 lib/Flickr/Photoset.pm
 lib/Flickr/Tools/Cameras.pm
+lib/Flickr/Tools/Reflection.pm
 lib/Flickr/Tools.pm
 lib/Flickr/Types/Tools.pm
 lib/Flickr/Roles/Permissions.pm
@@ -16,4 +17,5 @@ t/00-load.t
 t/01-types-tools.t
 t/02-tools.t
 t/03-cameras.t
+t/03-reflection.t
 TODO
