@@ -3,6 +3,7 @@ Revision history for Flickr-Tools
 1.21_02 15 November 2015
  * Got a role working as desired, Permissions.pm
  * Make the tests more to the point
+ * Add subclass and test for Reflection.pm
 
 
 1.21_01 12 October 2015
